# Ostrovok_task

./: .env.example  .gitignore  README.MD  docker-compose.yml  pyproject.toml
blog_app/: Dockerfile  pyproject.toml
blog_app/alembic/: env.py
blog_app/alembic/versions/: 644fb5bbe064_create_posts_table.py
blog_app/src/blog_app/: gunicorn_conf.py  main.py
blog_app/src/blog_app/api/: crud.py  dependencies.py  models.py  router.py  schemas.py
blog_app/src/blog_app/core/: config.py
blog_app/src/blog_app/db/: dependencies.py  helper.py
blog_app/src/blog_app/services/: post.py  post_cache.py
blog_app/tests/: test_post_cache_integration.py
