[project]
name = "blog-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dmitriy Alexandrov", email = "newsmobileads@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
]

[project.scripts]
blog-app = "blog_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
