[project]
name = "blog-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dmitriy Alexandrov", email = "newsmobileads@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.0",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.45",
    "gunicorn>=25.1.0",
    "redis>=7.3.0",
]

[project.scripts]
blog-app = "blog_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_app"]

[dependency-groups]
dev = [
    "black>=26.3.1",
]
